--- a/src/WebApi/WebApi/appsettings.json
+++ b/src/WebApi/WebApi/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "AllowedOrigins": ["https://localhost:9000"],
   "ConnectionStrings": {
     "DevelopmentConnection": "Data Source=..\\..\\Data\\data.db;Mode=ReadWriteCreate",
     "DefaultConnection": "Data Source=..\\..\\Data\\data.db;Mode=ReadWriteCreate",
