Finished the unit test for AddressService & fixed all bugs & added repository methods for all query use cases

--- a/src/WebApi/WebApi/appsettings.json
+++ b/src/WebApi/WebApi/appsettings.json
@@ -6,12 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": ["https://localhost:9000"],
+  "AllowedOrigins": [ "https://localhost:9000" ],
   "ConnectionStrings": {
     "DevelopmentConnection": "Data Source=..\\..\\Data\\data.db;Mode=ReadWriteCreate",
     "DefaultConnection": "Data Source=..\\..\\Data\\data.db;Mode=ReadWriteCreate",
     "UnitTestConnection": "Data Source=..\\..\\Data\\test-data.db;Mode=ReadWriteCreate",
     "UnitTestDevConnection": "Data Source=..\\..\\..\\..\\..\\Data\\test-data.db;Mode=ReadWriteCreate"
   },
-  "ConnectionStringName": "Default"
+  "ConnectionStringName": "Default",
+  "InitialDataJsonFile": "initialData.json"
 }
