--- a/src/WebApi/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi/WebApi.csproj
@@ -18,8 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Migrations\" />
+    <Content Update="initialData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
