Added angular app

--- a/src/WebApi/WebApi/appsettings.json
+++ b/src/WebApi/WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": [ "https://localhost:9000" ],
+  "AllowedOrigins": [ "http://localhost:4200" ],
   "ConnectionStrings": {
     "DevelopmentConnection": "Data Source=..\\..\\Data\\data.db;Mode=ReadWriteCreate",
     "DefaultConnection": "Data Source=..\\..\\Data\\data.db;Mode=ReadWriteCreate",
